# ingkit

./: .gitignore  LISENCE.txt  README.md  pyproject.toml  requirements.txt
demo/: filter_demo.py  plot_demo.py  sliding_spectrum_analysis_demo.py  spectrum_analysis_demo.py
src/: docstring_rule.md
src/ingkit/: __init__.py
src/ingkit/io/: read_vmec.py  wout_symmetry_rfp.txt
src/ingkit/myplot/: __init__.py  colormap.py  styles.py  vmec_plot.py
src/ingkit/myplot/styles/: my_default.mplstyle  my_default2.mplstyle  myplot.mplstyle  tick_in.mplstyle
src/ingkit/physics/: __init__.py
src/ingkit/physics/X_ray/: __init__.py  double_filter.py  filter_transmission.py
src/ingkit/physics/plasma/: brems.py  core.py
src/ingkit/signals/: __init__.py  analysis.py  fft.py  filters.py
src/ingkit/tools/: type_check.py
src/ingkit/utils/: cli.py
test/: test_cli.py  test_import.py  test_signal_analysis.py
tests/: test_myplot.py  test_plasma_core.py  test_type_check.py  test_vmec.py  test_x_ray_filters.py
